# poke-challenge

./: .gitignore  docker-compose.yml  pyproject.toml  readme.md
docker/: Dockerfile  local.env  start.sh
poke_challenge/: manage.py
poke_challenge/core/: models.py  serializers.py  views.py
poke_challenge/core/management/commands/: datafeeder.py
poke_challenge/core/migrations/: 0001_initial.py  0002_stat.py  0003_remove_pokemon_base_stats.py
poke_challenge/poke_challenge/: asgi.py  settings.py  urls.py  wsgi.py
